Fix white space at bottom of page, style result div

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
   margin: 0; 
 }
 
+html, body {
+  height: 100vh;
+}
+
 body {
   width: 100%;
   font-family: 'Raleway', sans-serif;
@@ -211,9 +215,10 @@ body {
 
 .appWrapper {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  max-height: auto;
   background-color: var(--background);
-  /* padding-top: 10rem; */
+  padding-top: 10rem;
 }
 
 .inputsWrapper {
@@ -261,7 +266,7 @@ body {
   font-size: 1rem;
   color: #fff;
   /* border: 1px solid red; */
-  padding: 2rem 0;
+  padding: 2rem 0 0 0;
   text-align: center;
 }
 
@@ -274,4 +279,12 @@ body {
   color: #fff;
   font-family: 'raleway', sans-serif;
   font-size: 1rem;
+}
+
+.result {
+  padding: 3rem 0;
+  text-align: center;
+  font-size: 2rem;
+  color: var(--purple);
+  /* border: 1px solid red; */
 }
